infra/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: app.jatin711-debug.site
      http: 
        paths: 
          - path: /api/search?q=?(.*)
            backend:
              serviceName: server-service
              servicePort: 3000
          - path: /api
            backend:
              serviceName: server-service
              servicePort: 3000
